--- a/index.html
+++ b/index.html
@@ -40,88 +40,89 @@
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/goris.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Cy Goris | Mapping California Dairy Processing Plant Activity Against CO2e Emission Data</a>
             </h5>
-            <p class="card-text">xxxxxxx
+            <p class="card-text">75% of companies' greenhouse gas emissions are the result of scope 3 emissions, the indirect emissions upstream and downstream of a company's value chain accounting. Scope 3 emissions account for the majority of company greenhouse gas emissions along supply chains compared to scope 1 and 2 direct sources of emissions. While scope 3 emissions are the fastest growing source of emissions along supply chains, it is also the slowest to adopt credible reporting and reduction standards due to limited reporting standards addressing the lack of primary data, traceability and safeguards against double counting across reporting. Despite these challenges, companies are increasing their scope 3 reporting, enabling the reduction of scope 3 emissions along supply chains. Reporting scope 3 emissions remains voluntary, as well as mitigation efforts to reduce the environmental impact of scope 3 emissions, unlocking a market opportunity for voluntary investments along various scope 3 supply chains with shared direct sources of emissions. 
             </p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://www.canva.com/design/DAF37is6apI/8w83A8HHiJTNs_kbos9llg/view?utm_content=DAF37is6apI&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vTXjYgpxo-LhWgZXi2CkcM6ryYN4IoaKSBp7VaYO6NppSZ5_QF6AweSROIwrUFBPxl2Eu6hILeJlQXk/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/fidahoussen.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title  </a>
+              <a class="text-dark">Chaznane Fidahoussen | Remote Sensing Damage Assessment of Gaza Strip, Palestine (October 7 - December 4th)</a>
             </h5>
-            <p class="card-text">xxxxxxxx
+            <p class="card-text">This damage assessment project features point location detection across the Gaza Strip, the ongoing and prominent Israel-Gaza conflict zone. The initial detection involved both preprocessing and change detection methods utilizing Copernicus SAR 1 satellite imagery, dates 10/7/23 - 12/04/23. By analyzing the spatial distribution of the damage and correlating it with factors such as population density and infrastructure, the goal is to assess the extent of the damage and its impact on the population and infrastructure. The findings can inform aid efforts, resource allocation, urban planning, and reconstruction strategies. The research is part of a broader agenda focused on aid recovery and understanding the humanitarian impact of the conflict. Relevant stakeholders include humanitarian organizations, local populations, urban planning authorities, research institutions, policymakers, and neighboring countries.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/1Wprk_2KYAiIYpZVAJYxXHrXofWKZofV2BqFT7jdMjSw/edit?usp=sharing" target="_blank">GIS Presentation</a>
+              <br>
+              <a class="text-secondary" href="https://docs.google.com/document/d/1trTjintDqggf9zWEHejCvORD6EBtwpDaNvMtKutvI2I/edit?usp=sharing" target="_blank">Project Methods</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="img/shafqat.png" alt=""></a>
+          <div class="card-body">
+            <h5 class="card-title">
+              <a class="text-dark">Ramiz Shafqat | Mapping Pakistan's Flood Vulnerability</a>
+            </h5>
+            <p class="card-text">Pakistan faces increasingly severe and abrupt environmental impacts due to the climate change. The country is required to boost its disaster management as well as risk management planning. In 2022, a devastating flood inundated the nation, the worst in its history. In this context, vulnerable areas prone to flooding were mapped in this project, deriving both areal and building footprint impacts. The areas adjoining the river as well as those perhaps with less gradient are more prone to the flooding, as well as areas suffering potentially broken or absent drainage system infrastructure. Through both preprocessing and change detection of satellite imagery (SAR 1), the results of this project show that almost 41 % area (192 sq mi out of 496 sq mi) and 10 % buildings were inundated within the project area which was centered at rural areas of District Larkana, Sind.
+
             </p>
-              <a class="text-secondary" href="">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vQtE8gOGuZ05CMF69MZinEtwXKvWdQ7Go277XwNkFweZt0IvVZmA5m9NxCwjNRlhojfAFu6GwQ7oWXB/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSGdYmlUJeiRupEGhF__PYkBy367-EvCl-igwW27s8zRcGLG877dLgX-zUXHz5e3PG_2Sp5w4K5ipJz/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/lee.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Anmy Lee | Voting Patterns in the 2020 Taiwan Presidential Election</a>
             </h5>
-            <p class="card-text">xxxx
+            <p class="card-text">Taiwan’s presidential elections have heretofore primarily been a two-way struggle between the pro-unification Chinese Nationalist Party (KMT) and the incumbent pro-independence pro-independence Democratic Progressive Party (DPP). The independence-unification split is commonly portrayed as being a generational one, yet less typically analyzed as something shaping attitudes toward national and political identification is class; specifically the social role occupied by individuals at the intersection of wealth and ethnicity in Taiwanese society. I conducted a spatial statistics project to investigate the extent to which the socioeconomic class status of Taiwanese people influence their political stances regarding independence/unification from/with China, and to identify geographical areas where class status has the strongest correlation with voting patterns. Through conducting various statistical analyses and choropleth mapping, I concluded that non-Indigenous Taiwanese of mid to lower income tend to vote DPP, while Indigenous Taiwanese of lower income overwhelmingly vote KMT, which seems to be a result of historical and ongoing socioeconomic marginalization of Indigenous peoples in Taiwan. Yet, for non-Indigenous Taiwanese, the urban/rural split also seems to have a much more salient effect on voting patterns than wealth, or even age and sex.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRcar1jC5WV2nYT8yjK4jupgvhmcHfA8KRCJHvMviYkRm2bsDfCDKfsDWbZphaC3IWjDeWqFJaqqYOk/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
+              <br>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vT_PLwLOLQnxJBd4ko9WCVxagINuGxa38s5Dl1pkgxvYwXJ75AbLXgjVMvA6hBcDJbN-ql_3E1usg_l/pub" target="_blank">Project Methods</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="img/levi.png" alt=""></a>
+          <div class="card-body">
+            <h5 class="card-title">
+              <a class="text-dark">Anna Mara Rosa Levi | A Case of Environmental Injustice?  Examining the Spatial Distribution of US Natural Gas Compressor Stations</a>
+            </h5>
+            <p class="card-text">Long-standing research into the field of environmental (in-)justice has repeatedly shown the unequal exposure of marginalized populations to environmental pollution. In a similar vein, this GIS project aims to understand the spatial distribution of gas pipelines (approximated through natural gas compressor stations) in the United States. Gas pipelines are at risk of leakage, ruptures and explosions, resulting in detrimental health effects and the pollution of their human- and non-human environments. If these infrastructures were disproportionately prevalent within marginalized populations, they would thus constitute yet another case of environmental inequality. To critically examine this claim, this research has evaluated the placement of natural gas compressor stations along five demographic indicators of marginalization. It has then compared these demographics with the overall demography of the United States as well as identified clusters and patterns within the natural gas compressor station’s placement. While the results can not be seen to clearly confirm the aforementioned hypothesis, they contribute to the illumination of the spatial and demographic dimension of pipeline infrastructures and help identify important pathways for future research.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vQZ-bP18xDx6StLw8a80UNErqYMTO_JF6U19ClTu0a4YFUJfRxr4sSwF6nkxCG97S1UUJtpQpSv35_J/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
+              <br>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSOzdChvKG5eAWJnehXgS_G3IkogYXN4vFyvKRJ3aN4fZmWeQYgzs3vaPHK0hooSfz9iy5cQL-s6SJd/pub" target="_blank">Project Methods</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="img/kim.png" alt=""></a>
+          <div class="card-body">
+            <h5 class="card-title">
+              <a class="text-dark">Hannah Kim | The U.S Migrant "Crisis"</a>
+            </h5>
+            <p class="card-text">For years, the Republican Party has stated that the United States is undergoing an immigration crisis. From Donald Trump’s “Build the Wall” campaign to Governor Greg Abbott's Border Disaster Declaration, the GOP is working tirelessly to thwart migrants from “invading” the nation. They have blamed the Democratic Party and President Joe Biden for the surge of migrant crossings, declaring Biden’s open border policy is inviting “illegal aliens” into the country. However, the Republican Party is not the only party to criticize Biden – members of his own party blame him for the surge of migrants and lack of coordinated response to the growing situation. While sanctuary cities, such as New York City, Denver, and Chicago, welcomed migrants initially, these cities are now beyond capacity and are openly discouraging migrants from coming to their city. Is the US currently undergoing a migrant crisis? If so, how many people are crossing the border, and where are they migrating from? This project first collects immgration data, then maps this data over time to demonstrate immigration flow at border port entry locations across the United States.   
             </p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://hannahkim562.my.canva.site/">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
-          <div class="card-body">
-            <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
-            </h5>
-            <p class="card-text">xxxxxxxxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
-              <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
-          <div class="card-body">
-            <h5 class="card-title">
-              <a class="text-dark">Name | Title </a>
-            </h5>
-            <p class="card-text">xxxxxxxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
-              <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
-          <div class="card-body">
-            <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
-            </h5>
-            <p class="card-text">xxxxxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
-              <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vReKB_MIss_eIq7Xd-3aTcAhEEt3J26m4DWKuWwXM_yYpWZHdxqa0tXWOiJIFrHzf7nZxGX66rGIrCl/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
