--- a/page2.html
+++ b/page2.html
@@ -41,30 +41,38 @@
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/ibarra.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | title</a>
+              <a class="text-dark">Elizabeth Sarahi Magallon Ibarra | Labor migrants' access to healthcare: an analysis of the proximity of healthcare facilities to labor camp locations in Dubai, UAE</a>
             </h5>
-            <p class="card-text">xxxxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Labor migrants make up to 90% of Dubai’s private sector workforce. Most migrants are from India, Bangladesh, Nepal, Sri Lanka and Pakistan. Migrant workers often live in overcrowded labor camps or densely populated areas, which increases their vulnerability to the spread of viruses. This project investigates labor migrants' access to healthcare in Dubai, UAE, focusing on the spatial distribution of healthcare facilities within labor camp buffer zones. The primary research question explores spatial patterns and trends in the accessibility of essential services, including healthcare and emergency response centers, for migrant workers in the UAE. Using spatial analysis tools, the study aims to identify geographic disparities and analyze the proximity of healthcare facilities to labor camps. By mapping and assessing these spatial patterns, the research aims to provide valuable insights into the challenges faced by labor migrants in accessing healthcare services. The findings may inform policymakers, urban planners, and healthcare providers about potential gaps in service delivery, contributing to more targeted interventions and improved healthcare accessibility for this vulnerable population in the UAE.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRxOrmYHLP8ManxD6ix2lskZ-mM2tEKfpTdhGajRjsmkoPVi9r-Hzj2ZPjy4GzynYnIIGonXJENZbLl/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href=" 
-              " target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSYJB4-ypmAtpwZNr0HBNGxtiSwxCVnZAiY7rPCNGjDey0VnaSlRjLd6TFDxlg-OlJyNxxWPqMtHn4W/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/stevens.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Claire Stevens | Where Are Our Students? Mapping location accessibility for Youth Education programs, International Rescue Committee (IRC)</a>
             </h5>
-            <p class="card-text">xxxxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Since Spring of 2022, more than 116,000 asylum seekers have arrived in New York City, with an average of 300-500 people still arriving seeking shelter every day. The recent influx of migrants to NYC includes those fleeing the Ukraine War, which has seen 25,000 Ukrainian refugees resettle in the NYC area. With increased political and economic unrest in Latin America, hundreds of thousands of migrants from Venezuela, Colombia, and El Salvador are also arriving to the US, particularly NYC.
+            <br>
+            <br>
+            In 2023, the IRC Youth Education Department in NYC has served students from 38 countries, speaking over 15 different languages. We are always looking for ways to improve programming with more accessibility for students, allowing them  the best chance to succeed educationally and personally without further burdening with long travel hours to attend IRC programs.
+            <br>
+            <br>
+            To this end, a primary spatial question was developed: Where do our students live in NYC, and what are the most central educational facilities for potential programming locations?
+            <br>
+            <br>
+            Utilizing spatial softwares, a partial answer was derived: research and data visualization confirm the assumption that most of our students, specifically students who are eligible for IRC grants, live in south Brooklyn, and in temporary housing facilities in Manhattan.</p>
+              <a class="text-secondary" href="https://www.canva.com/design/DAF2Dvue0JM/Xi73AVffd6P3DQjCf7W-Zw/view?utm_content=DAF2Dvue0JM&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vT2DqwBLPdjgdQe3hFl961MItbSbdu1eNQbROnxjFWzOJqWXqo2ExBgXgQKFyN5z_0yys3Of3u7ejNJ/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
