--- a/page2.html
+++ b/page2.html
@@ -47,9 +47,9 @@
               <a class="text-dark">Elizabeth Sarahi Magallon Ibarra | Labor migrants' access to healthcare: an analysis of the proximity of healthcare facilities to labor camp locations in Dubai, UAE</a>
             </h5>
             <p class="card-text">Labor migrants make up to 90% of Dubai’s private sector workforce. Most migrants are from India, Bangladesh, Nepal, Sri Lanka and Pakistan. Migrant workers often live in overcrowded labor camps or densely populated areas, which increases their vulnerability to the spread of viruses. This project investigates labor migrants' access to healthcare in Dubai, UAE, focusing on the spatial distribution of healthcare facilities within labor camp buffer zones. The primary research question explores spatial patterns and trends in the accessibility of essential services, including healthcare and emergency response centers, for migrant workers in the UAE. Using spatial analysis tools, the study aims to identify geographic disparities and analyze the proximity of healthcare facilities to labor camps. By mapping and assessing these spatial patterns, the research aims to provide valuable insights into the challenges faced by labor migrants in accessing healthcare services. The findings may inform policymakers, urban planners, and healthcare providers about potential gaps in service delivery, contributing to more targeted interventions and improved healthcare accessibility for this vulnerable population in the UAE.</p>
-              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRxOrmYHLP8ManxD6ix2lskZ-mM2tEKfpTdhGajRjsmkoPVi9r-Hzj2ZPjy4GzynYnIIGonXJENZbLl/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vRxOrmYHLP8ManxD6ix2lskZ-mM2tEKfpTdhGajRjsmkoPVi9r-Hzj2ZPjy4GzynYnIIGonXJENZbLl/pub?start=false&loop=false&delayms=3000" target="_blank">+ GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSYJB4-ypmAtpwZNr0HBNGxtiSwxCVnZAiY7rPCNGjDey0VnaSlRjLd6TFDxlg-OlJyNxxWPqMtHn4W/pub" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vSYJB4-ypmAtpwZNr0HBNGxtiSwxCVnZAiY7rPCNGjDey0VnaSlRjLd6TFDxlg-OlJyNxxWPqMtHn4W/pub" target="_blank">+ Project Methods</a>
             </div>
           </div>
         </div>
@@ -78,58 +78,71 @@
         </div>
         <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/jreije.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | xxxx</a>
+              <a class="text-dark">Eliana Jreije | MTA Subway Stations: Loci of Inundation Hazards and Vegetative Cover Remediation</a>
             </h5>
-            <p class="card-text">xxxxx
+            <p class="card-text">New York City has a history of experiencing debilitating stormwater flooding in the case of extreme weather events, leaving the MTA subway system at risk, unable to maintain operations, at times for days on end. Green spaces play an important role in stormwater capture, but limited efforts have been made to link their presence to the pattern of flooding in subway stations. 
+            <br>
+            <br>
+            I conducted a bivariate analysis to map which subway stations in Manhattan are most at risk for stormwater flooding and how this correlates to their proximity to green spaces. In Upper Manhattan, the presence of green space doesn’t appear to correlate with stormwater flooding in subway stations; other factors such as elevation and infrastructure are more likely determining factors where flooding is concentrated. The highest correlation between the two variables can be observed in Lower Manhattan, where the bulk of flooding occurs coupled with least amounts of green space. 
             </p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vSCMe3VkGfj0mYBB6E4MJPekjVsNktiGrvaGNfEZjXldYe0SBW42VEZLjujIaj2ntjiK-7wa9YpH7X0/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vS4DQCR1jL-ruyz4izmC0SHeDibUqoKSEeoEtOGvyTOQ3-Vh1VJ7Gx17txKxn9MnK6EGS8v7veGFtFk/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
          <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/ARJ.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Danilo Andres Rios Jiménez |  Suitability Analysis for Community Solar Project in Puerto Rico</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Within climate change discourse, the imperative of shifting towards a low-carbon energy system has become one of the main challenges for achieving sustainability. In Puerto Rico, this is readily apparent as the archipelago’s crumbling energy infrastructure, exacerbated by Hurricane Maria in 2017, leads to incredibly high rates of blackouts and energy costs. The island’s energy grid centers around large fossil fuel-burning complexes that supply 98% of the electricity, so Puerto Rico must shift away from its methane, oil, and coal dependency to transform its energy system. However, renewable energy generation is not automatically given as a net benefit because there are ways that these projects remain entrenched in the systemic inequalities that result from the fossil fuel industry. Instead, specifically focusing on community renewable energy development can offer a pathway for greater local autonomy and self-determination, especially compared to utility-scale renewable energy provision, by facilitating local participation in forming energy futures and empowering communal decision-making. Developing community-owned renewable energy systems that prioritize democratic control, public ownership, and equitable distribution of benefits, protects the rights of the most vulnerable communities and populations who bear the brunt of energy system injustices. 
+            <br>
+            <br>
+            For this mapping project, I have analyzed census block groups for their low-income population percentages, proximity to power lines, and solar energy potential in Puerto Rico. My goal in mapping these data is to highlight which areas could be prioritized for community solar energy development based on the project's suitability criteria. 
+            </p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vSBcIy1dBarKYjrTlCPgNIawdC15goPUnM8VmeW9h9fAZ2lpgXeUZ7TgeEcJJ3q3pHlgUCDeJUAJIWo/pub?start=true&loop=true&delayms=5000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQrszNSHDO1RZlU-UuzGc58woI9H0r9QjkPeWq7KTF6INpaBPWMzASD60Xi55xn7yKma3cp3igwzGFl/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
          <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/cleary.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Patrick Cleary | Is Climate Risk Priced In? A Case Study of Collier County, Florida</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">When analyzing the economics of climate change, a key consideration is how markets are pricing in the elevated risks of climate-induced disasters. In areas such as Florida, where the most common disaster is hurricane-induced flooding, the real estate and insurance markets provide a particularly salient viewpoint of this process. Since almost all flood insurance is provisioned by FEMA, and because they have recently updated their pricing system to better incorporate flood risk, it is possible to see on the ZIP code level how much FEMA projects flood insurance prices (and therefore, climate risk) rise. 
+            <br>
+            <br>
+            Using statistical spatial tools, FEMA data on flood insurance pricing, and housing price data from the Collier County Appraiser’s Office, I conducted an OLS Regression Analysis of whether single family home buyers are incorporating these insurance premium rises in into housing prices.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vQrnJb2amEdfNuCAy-kYCDwcsTnwFCqIDMOeF3uj8MYquUI-XyEbKJx6svV_Y9Wmw/pub?start=false&loop=false&delayms=5000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vQr3FFJdJAMTTSzyBP2Iqr3o_Q5IwOxuVIIwqTs71CVERElUk7wNOMGJOCoYrjINg/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
          <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/mensah.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Emmanuel Kobina Mensah | Population & Education Trends in East Asia</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Asia's economies have seen enormous transformations during the last five decades, transitioning from predominantly agrarian cultures to more contemporary industrial states. What have these changes meant for populations, particularly women with respect to status and advancement? 
+            <br>
+            <br>
+            This spatial analysis project first collects, then maps, then applies spatial statistics tests to determine clusters of significance for populations within China's county-level administrative units.</p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vTRE5s7a4bk2cQrWqgFtukMbTYXvpQJn3_MPwPxZe5MNNx5sZ1PlYRIfMh2GlcGoa1ZD5RT_qGKqCJr/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vRwrJJPYSkZ2oDZ45ZappLVif2Rt6VNRnTvctPE7nuoTrJSHAkUZnmGiRyW2RBobNeroxV8W3u5oDac/pub" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
