--- a/page3.html
+++ b/page3.html
@@ -41,62 +41,56 @@
     <div class="row">
       <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/gbandeba.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Rynash Gbandeba | A survey of subsidence and uplift zones across New York City</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Scientists using space-based, remoted sensed radar data have found that land in New York City is sinking at varying rates that can be attributed to human and natural factors. Amongst a general trend of sinking, a few locations exhibit rising. While the elevation changes seem small – fractions of inches per year – they have the potential to enhance or diminish local flood risk linked to sea level rise.​  
+            <br>
+            <br>
+            In this project, the original, open-sourced subsidence dataset is analyzed against NYC's 5 borough districts.  For each borough, summary statistics are derived through spatial tools in order to access relative subsidence and uplift per borough.</p>
+              <a class="text-secondary" href="https://1drv.ms/p/s!Agkbs13Cv9pJiQtMIhaaj2uaopl7" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://1drv.ms/p/s!Agkbs13Cv9pJiQtMIhaaj2uaopl7" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/watson.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Chelsea Watson | Waste Justice in New Jersey</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
-              <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/dummy.png" alt=""></a>
-          <div class="card-body">
-            <h5 class="card-title">
-              <a class="text-dark">Name | Title </a>
-            </h5>
-            <p class="card-text">xxxx
+            <p class="card-text">Waste facilities have long been a site of struggle in the environmental justice movement because of their negative health and environmental impacts and their frequent placement in already marginalized communities. In this research, I analyze the location of waste facilities in New Jersey as they relate to minority, low income, and limited english proficiency communities, referred to as overburdened communities. Through data visualization and vector analysis I show that there is a higher concentration of waste facilities in already overburdened communities, and within overburdened communities there is a higher proportion of facilities in minority communities as opposed to white communities. This demonstrates the disproportionate impact of waste facilities on environmental justice communities and points to the need for race-specific analyses when addressing environmental justice in New Jersey. 
             </p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/e/2PACX-1vSArGpuNgU_zsemx2Qj6IPL2GwOY_D98HwsktY4qDThf1llVh92vrz3Vh17waqh9yv2AzsnntPbOdTy/pub?start=false&loop=false&delayms=3000" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/e/2PACX-1vR17NrWJBm2NmZMAZN_lY7eGXS9wOWMja8oZURwktxse-JB0SuFgoeVFeU4HIRGbFP_UGuSVhtQwman/pub
+              " target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
-         <div class="col-lg-6 portfolio-item">
+        <div class="col-lg-6 portfolio-item">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="img/z.wright.png" alt=""></a>
+          <a href="#"><img class="card-img-top" src="img/malard.png" alt=""></a>
           <div class="card-body">
             <h5 class="card-title">
-              <a class="text-dark">Name | Title</a>
+              <a class="text-dark">Tarik Malard | Identifying Potential Areas for New Renewable Power Plants in Madagascar</a>
             </h5>
-            <p class="card-text">xxxx</p>
-              <a class="text-secondary" href="" target="_blank">GIS Presentation</a>
+            <p class="card-text">Madagascar's renewable energy potential is enough to sustain the great Island population, but the national distribution network has never been developed enough to reach an important part of the population. Madagascar is one of the least developed countries in the world, and access to electricity is now a human right, and has been proven to be a critical condition for developement. Addressing Malagasy’s access to energy is directly tied to education and workforce development. 
+            <br>
+            <br>
+            To this end, this mapping project surveys the potential of energy development across the island via thematic mapping and a suitability model framework.
+            </p>
+              <a class="text-secondary" href="https://docs.google.com/presentation/d/1wjqWg5UXxBjG3SpXVqI55ND8vJx0DkoOxy4cGjPnomc/edit?usp=sharing" target="_blank">GIS Presentation</a>
               <br>
-              <a class="text-secondary" href="" target="_blank">Project Methods</a>
+              <a class="text-secondary" href="https://docs.google.com/document/d/11g4kE-uAPjcvSz_1wGzTmXBJCyp4HWygdm-Tqz1GxNE/edit?usp=sharing" target="_blank">Project Methods</a>
             </div>
           </div>
         </div>
-        </div>
+      </div>
     <!-- /.row -->
   </div>
   <!-- /.container -->
