--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/2-col-portfolio.css">
-  <title>Geographic Information Systems - NINT5380 | CRN: 2189  Fall 2023 - Projects</title>
+  <title>GIS NINT5380 | CRN: 2189  Fall 2023 - Projects</title>
 </head>
 <body>
 
